--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   <body>
     <div id="app">
+      <img
+        src="img/money-white.png"
+        alt="stack of coins"
+        id="money"
+        width="40px"
+      />
       <div id="errorDiv"></div>
       <h1 id="heading">LOAN CALCULATOR</h1>
       <form class="wrap" id="details">
