--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Loan Calculator | Phil Jacks</title>
+    <title>Loan Calculator | Useful Web Apps</title>
     <meta charset="UTF-8" />
   </head>
 
